--- a/api/hotel/package.json
+++ b/api/hotel/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "hotel",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.10",
-    "morgan": "^1.10.0"
-  }
+	"name": "hotel",
+	"version": "1.0.0",
+	"description": "API for hotel booking service",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/index.js",
+		"dev": "nodemon -L src/index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"jsonwebtoken": "^8.5.1",
+		"luxon": "^2.3.2",
+		"mongoose": "^6.2.10",
+		"morgan": "^1.10.0",
+		"nodemailer": "^6.7.3"
+	}
 }
