--- a/api/hotel/package.json
+++ b/api/hotel/package.json
@@ -19,6 +19,7 @@
 		"luxon": "^2.3.2",
 		"mongoose": "^6.2.10",
 		"morgan": "^1.10.0",
-		"nodemailer": "^6.7.3"
+		"nodemailer": "^6.7.3",
+		"pino": "^8.6.1"
 	}
 }
