--- a/api/bar/package.json
+++ b/api/bar/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "bar",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.10",
-    "morgan": "^1.10.0"
-  }
+	"name": "bar",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node ./src/index.js",
+		"dev": "nodemon -L ./src/index.js"
+	},
+	"keywords": [],
+	"author": "MikeTeddyOmondi",
+	"license": "MIT",
+	"dependencies": {
+		"cloudinary": "^1.32.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.2.10",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.14",
+		"snyk": "^1.833.0"
+	}
 }
