Updated env in the .env file

--- a/api/auth/auth-service.yml
+++ b/api/auth/auth-service.yml
@@ -24,8 +24,8 @@ services:
     ports:
       - 27017:27017
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - hotel-elmiriam-mongodb-data:/data/db
     networks:
