Updated dockerfile & compose | hotel service

--- a/api/hotel/hotel-service.yml
+++ b/api/hotel/hotel-service.yml
@@ -10,6 +10,8 @@ services:
       - PORT=8003
     env_file:
       - ./src/.env
+    ports:
+      - "8003:8003"
     networks:
       - hotel-elmiriam-network
     # depends_on:
