--- a/api/bar/package.json
+++ b/api/bar/package.json
@@ -14,12 +14,14 @@
 		"cloudinary": "^1.32.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"datauri": "^4.1.0",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.10",
 		"morgan": "^1.10.0",
-		"multer": "^1.4.5-lts.1"
+		"multer": "^1.4.5-lts.1",
+		"multer-storage-cloudinary": "^4.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.14",
