--- a/api/hotel/hotel-service.yml
+++ b/api/hotel/hotel-service.yml
@@ -4,7 +4,7 @@ services:
   hotel:
     container_name: hotel-elmiriam-hotel-svc
     image: ranckosolutionsinc/hotel-service:1.0-alpha
-    build: ./
+    # build: ./
     restart: always
     environment:
       - PORT=8003
