--- a/api/hotel/package.json
+++ b/api/hotel/package.json
@@ -21,7 +21,9 @@
 		"mongoose": "^6.2.10",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.7.3",
-		"pino": "^8.6.1"
+		"pino": "^8.6.1",
+		"redis": "^4.6.10",
+		"redis-om": "^0.4.2"
 	},
 	"devDependencies": {
 		"snyk": "^1.1100.0"
