--- a/api/bar/package.json
+++ b/api/bar/package.json
@@ -11,6 +11,7 @@
 	"author": "MikeTeddyOmondi",
 	"license": "MIT",
 	"dependencies": {
+		"amqplib": "^0.10.3",
 		"cloudinary": "^1.32.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
@@ -21,7 +22,9 @@
 		"mongoose": "^6.2.10",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
-		"multer-storage-cloudinary": "^4.0.0"
+		"multer-storage-cloudinary": "^4.0.0",
+		"redis": "^4.6.10",
+		"redis-om": "^0.4.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.14",
