--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   gateway:
     container_name: hotel-elmiriam-api-gateway
     image: ranckosolutionscinc/hotel-elmiriam-api-gateway:v1
+    build: ./
+    restart: unless-stopped
     ports:
       - 8009:8009
     networks:
