--- a/api/hotel/package.json
+++ b/api/hotel/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"amqplib": "^0.10.3",
+		"axios": "^1.6.1",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
