--- a/api/auth/auth-service.yml
+++ b/api/auth/auth-service.yml
@@ -38,6 +38,11 @@ services:
     image: mongo-express:latest
     ports: 
       - 8081:8081    
+    # environement:
+    #   - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
+    #   - ME_CONFIG_MONGODB_URL=http://mongo:27017?ssl=false
+    #   - ME_CONFIG_MONGODB_ADMINUSERNAME=mongo
+    #   - ME_CONFIG_MONGODB_AUTH_PASSWORD=password
     networks:
       - hotel-elmiriam-network     
 
