Updates - refactored code (stable release preparations)

--- a/checkout/.env.sample
+++ b/checkout/.env.sample
@@ -1,3 +1,3 @@
-RABBITMQ_URL=amqp://localhost:15692
+RABBITMQ_URL=amqp://localhost:15692/<RABBITMQ_VHOST>
 INTASEND_API_TOKEN=ISSecretKey_live_aafc6910-c6e6-4cf1-b970-f037a48ccf58
 INTASEND_PUBLISHABLE_KEY=SPubKey_live_64767d0b-292f-4694-bb5f-e18e638ca64e
