--- a/api/bar/package.json
+++ b/api/bar/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"jsonwebtoken": "^9.0.0",
+		"minio": "^7.1.3",
 		"mongoose": "^6.2.10",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
@@ -27,7 +28,7 @@
 		"redis-om": "^0.4.2"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.14",
+		"nodemon": "^3.0.3",
 		"snyk": "^1.833.0"
 	}
 }
