--- a/api/hotel/package.json
+++ b/api/hotel/package.json
@@ -23,6 +23,7 @@
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.7.3",
 		"pino": "^8.6.1",
+		"pino-pretty": "^10.3.1",
 		"redis": "^4.6.10",
 		"redis-om": "^0.4.2"
 	},
