--- a/api/hotel/src/.env.sample
+++ b/api/hotel/src/.env.sample
@@ -5,3 +5,12 @@ AUTH_API_URL=
 NODE_ENV=
 DB_URL=
 PORT=
+RABBITMQ_HOST=
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=
+RABBITMQ_PASSWORD=
+RABBITMQ_VHOST=
+
+# Local
+AUTH_API_URL=http://localhost:8000
+DB_URL=mongodb://localhost:27017/hotel
