Updates: bug fixes & refactored sms service to use UjumbeSMS platform

--- a/sms/.env.sample
+++ b/sms/.env.sample
@@ -1,5 +1,10 @@
 PORT=7879
 NODE_ENV=development
 RABBITMQ_URL=
-MOBITECH_API_URL=
-MOBITECH_API_KEY=
+
+UJUMBESMS_API_KEY=
+UJUMBESMS_ACCOUNT_EMAIL=
+UJUMBESMS_API_URL=https://ujumbesms.co.ke
+
+# MOBITECH_API_URL=
+# MOBITECH_API_KEY=
