Updates: fix & refactor bar service - docker compose manifest

--- a/api/bar/bar-service.yml
+++ b/api/bar/bar-service.yml
@@ -8,8 +8,8 @@ services:
       - PORT=8004
     env_file:
       - ./.env
-    ports:
-      - "8004:8004"
+    # ports:
+    #   - "8004:8004"
     networks:
       - hotel-elmiriam-network
     depends_on:
