Updates: fixed configurations updates & leaks

--- a/api/auth/src/.env.sample
+++ b/api/auth/src/.env.sample
@@ -1,6 +1,13 @@
 # Auth service .env config
 REFRESH_SECRET=
 ACCESS_SECRET=
-NODE_ENV=
-DB_URL=
-PORT=
+NODE_ENV=development
+DB_URL=mongodb://mongo:27017/auth
+PORT=8000
+
+# RABBITMQ CONFIG
+RABBITMQ_HOST=172.26.123.215
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_VHOST=hotel_elmariam
