--- a/api/bar/.env.sample
+++ b/api/bar/.env.sample
@@ -1,17 +1,18 @@
 # Bar service .env config
 REFRESH_SECRET=
 ACCESS_SECRET=
-AUTH_API_URL=
-NODE_ENV=
-DB_URL=
-PORT=
+AUTH_API_URL=http://auth:80000
+NODE_ENV=development
+DB_URL=mongodb://mongo:27017/bar
+PORT=8004
+S3_HOSTNAME=172.26.123.215:9003
 
 # RABBITMQ CONFIG
-RABBITMQ_HOST=
-RABBITMQ_PORT=
-RABBITMQ_USERNAME=
-RABBITMQ_PASSWORD=
-RABBITMQ_VHOST=
+RABBITMQ_HOST=172.26.123.215
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_VHOST=hotel_elmariam
 
 # CLOUDINARY CONFIG
 CLOUDINARY_CLOUDNAME=
@@ -19,10 +20,10 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
 # MINIO CONFIG
-MINIO_API_HOST=
-MINIO_ACCESS_KEY=
-MINIO_SECRET_KEY=
+MINIO_API_HOST=172.26.123.215
+MINIO_ACCESS_KEY=knn48878HGtkc1EtbTJ8
+MINIO_SECRET_KEY=6VWn26wP526qcAs4ngdvdipZGGizoIunNxJqEoFk
 
 # Local
 # AUTH_API_URL=http://localhost:8000
-# DB_URL=mongodb://localhost:27017/hotel
+# DB_URL=mongodb://localhost:27017/bar
