--- a/checkout/.env.sample
+++ b/checkout/.env.sample
@@ -1,4 +1,19 @@
-RABBITMQ_URL=amqp://localhost:15692/<RABBITMQ_VHOST>
-INTASEND_API_TOKEN=ISSecretKey_live_aafc6910-c6e6-4cf1-b970-f037a48ccf58
-INTASEND_PUBLISHABLE_KEY=SPubKey_live_64767d0b-292f-4694-bb5f-e18e638ca64e
+AUTH_API_URL=http://auth:8000
+NODE_ENV=development
+DB_URL=mongodb://mongo:27017/checkout
+PORT=8008
+
+# INTASEND CONFIG
+INTASEND_API_TOKEN=
+INTASEND_PUBLISHABLE_KEY=
 INTASEND_TEST_MODE=true
+
+# RABBITMQ CONFIG
+RABBITMQ_URL=amqp://user:password@172.26.123.215:5672/hotel_elmiriam
+RABBITMQ_HOST=172.26.123.215
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_VHOST=hotel_elmariam
+
+
