--- a/sms/.env.sample
+++ b/sms/.env.sample
@@ -1,6 +1,6 @@
 PORT=7879
 NODE_ENV=development
-RABBITMQ_URL=
+RABBITMQ_URL=amqp://user:password@172.26.123.215:5672/hotel_elmiriam
 
 UJUMBESMS_API_KEY=
 UJUMBESMS_ACCOUNT_EMAIL=
