--- a/smtp/.env.sample
+++ b/smtp/.env.sample
@@ -1,8 +1,14 @@
 PORT=33000
 NODE_ENV=development
+
+# RESEND CONFIG 
 EMAIL_SENDER=
-RABBITMQ_URL=amqp://localhost:15672
-CLIENT_SECRET=
-CLIENT_ID=
-G_RFR_TKN=
-G_ACC_TKN=
+
+# RABBITMQ CONFIG
+RABBITMQ_URL=amqp://user:password@172.26.123.215:5672/hotel_elmiriam
+
+# GOOGLE WORKSPACE - GMAIL API CONFIG
+# CLIENT_SECRET=
+# CLIENT_ID=
+# G_RFR_TKN=
+# G_ACC_TKN=
