--- a/api/hotel/src/.env.sample
+++ b/api/hotel/src/.env.sample
@@ -1,15 +1,17 @@
 # Hotel service .env config
 REFRESH_SECRET=
 ACCESS_SECRET=
-AUTH_API_URL=
-NODE_ENV=
-DB_URL=
-PORT=
-RABBITMQ_HOST=
+AUTH_API_URL=http://auth:8000
+NODE_ENV=development
+DB_URL=mongodb://mongo:27017/hotel
+PORT=8003
+
+# RABBITMQ CONFIG
+RABBITMQ_HOST=172.26.123.215
 RABBITMQ_PORT=5672
-RABBITMQ_USERNAME=
-RABBITMQ_PASSWORD=
-RABBITMQ_VHOST=
+RABBITMQ_USERNAME=user
+RABBITMQ_PASSWORD=password
+RABBITMQ_VHOST=hotel_elmariam
 
 # Local
 AUTH_API_URL=http://localhost:8000
